--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "sass-loader": "^16.0.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "core-js"
+    ]
   }
 }
