--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-notifier": "^1.15.0"
   },
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "ts-loader": "^9.5.1",
